--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ flask-marshmallow==0.14.0
 Flask-Migrate==2.6.0
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
